
Phoronix Test Suite (Git)

pts-core: Add TEST_EXEC_PREPEND support
pts-core: Ensure XAUTHORITY gets passed if relevant to test execution
pts-core: Fixed dynamic dependency handling on Ubuntu 17.10 / apt-file with newer versions
pts-core: Fix warning about passing variables by ref to PTS modules
phodevi: Add basic Budgie desktop reporting
phodevi: IPMI fan speed reporting
toggle_screensaver: improved GNOME screensaver handling
toggle_screensaver: work better under Wayland / non-X environments where display server might not be detected

Phoronix Test Suite 7.4.0 Milestone 3
28 August 2017

pts-core: Reworked test exit status handling
ob_auto_compare: New module for seamless OpenBenchmarking.org result references
graphics_event_checker: Drop graphics_event_checker module as really provides no real benefit these days
phodevi: Improve CPU physical core count detection for multi-socket systems

Phoronix Test Suite 7.4.0 Milestone 2
15 August 2017

pts-core: Resolve possibility of first graph missing when exporting results as PDF
phodevi: WSLFS (Windows Subsystem for Linux) file-system detection
phodevi: Add monitor detection based on parsing EDID supplied by `xrandr --prop` (works well for newer NVIDIA setups)
phodevi: Initial "system type" support

Phoronix Test Suite 7.4.0 Milestone 1
31 July 2017

pts-core: Don't show PTS version when there is no sub-title, just leave it empty
pts-core: Add phoronix-test-suite unload-module sub-command
pts-core: Add phoronix-test-suite auto-load-module sub-command
pts-core: Drop juju scripts as appears unmaintained, happy to re-add if maintained
pts-core: Allow showing existing results from a result file in-progress on test runs
pts_Graph: Color tweaking
phodevi: Clear up extra potential fluff in the GPU model string
perf_tips: New module to indicate various performance tips to users

Phoronix Test Suite 7.2.1-Trysil
30 June 2017

pts-core: Don't pass arguments in quotes to pre/interim/post test scripts